add fork and memory-size attributes to scalatest ant task
git-svn-id: http://scalatest.googlecode.com/svn/branches/app@1709 fd1274fd-080f-5963-8033-43ee40fcd1de